--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -44,8 +44,8 @@
   </div>
 </footer>
 {% else %}
-<footer role="contentinfo" id="wb-info">
-  <nav role="navigation" class="container wb-navcurr">
+<footer id="wb-info">
+  <nav class="container wb-navcurr">
     <h2 class="wb-inv">About government</h2>
     <ul class="list-unstyled colcount-sm-2 colcount-md-3">
       <li><a href="https://www.canada.ca/en/contact.html">Contact us</a></li>
