--- a/_includes/codeTable.html
+++ b/_includes/codeTable.html
@@ -79,8 +79,8 @@
       </div>
       
       <div class="form-group">
-        <label for="dt_licence">Licence</label>
-        <select class="form-control" id="dt_licence" name="dt_licence" data-column="3">
+        <label for="dt_license">License</label>
+        <select class="form-control" id="dt_license" name="dt_license" data-column="3">
           <option value=""></option>
           {% assign license_array = "" | split: ',' %}
           
@@ -143,17 +143,27 @@
 
 <!-- Data Table -->
 <div class="col-md-9">
-  <table class="wb-tables table table-striped table-hover" id="dataset-filter" data-wb-tables='{"order": [1, "asc"], "columnDefs": [{"targets": [4, 5 , 7], "visible": false}], "paging": false}'>
+  <table class="wb-tables table table-striped table-hover" id="dataset-filter" data-wb-tables='{"order": [1, "asc"], "columnDefs": [{"targets": [4,5,7,8,9,10,11,12,13,14,15,16], "visible": false}], "paging": false}'>
     <thead>
       <tr>
         <th>Administration</th>
         <th>Project Name</th>
         <th>Description</th>
-        <th>Licence</th>
+        <th>License</th>
         <th>Tags</th>
         <th>Organization</th>
         <th>Code Repo</th>
         <th>Level</th>
+        <th>Download URL</th>
+        <th>Home Page URL</th>
+        <th>Langage</th>
+        <th>Related Code</th>
+        <th>Status</th>
+        <th>Vcs</th>
+        <th>Version</th> 
+        <th>Creation Date</th> 
+        <th>MetaData Last Updated</th> 
+
       </tr>
     </thead>
     <tbody>
@@ -202,6 +212,41 @@
             <td>
               {{fptms[0] | capitalize}}
             </td>
+            <td>
+              <a href= "{{ release.downloadURL[page.lang] }}" target="_blank"> 
+                {{ release.downloadURL[page.lang] | remove: "https://" | replace_first: "/", "                    " | truncate: 20, "" | rstrip }} 
+              </a>
+            </td>
+            <td>
+              <a href= "{{ release.homepageURL[page.lang] }}" target="_blank"> 
+                {{ release.homepageURL[page.lang] | remove: "https://" | replace_first: "/", "                    " | truncate: 20, "" | rstrip}} 
+              </a>
+            </td>
+            <td>
+                {% for langauge in release.languages %}
+                {{ langauge }}&nbsp;
+                {% endfor %}
+            </td>
+            <td>
+                {% for relatedCode in release.relatedCode %}
+                <a href= "{{ relatedCode.URL[page.lang] }}"> {{ relatedCode.name[page.lang] }} </a>
+                {% endfor %}
+            </td>
+            <td>
+                {{ release.status }}&nbsp;
+            </td>
+            <td>
+                {{ release.vcs }}&nbsp;
+            </td>
+            <td>
+                {{ release.version }}&nbsp;
+            </td>
+            <td>
+                {{ release.date.created }}&nbsp;
+            </td>
+            <td>
+                {{ release.date.metadataLastUpdated }}&nbsp;
+            </td>
           </tr>
           {% endfor %}
         {% endfor %}
@@ -228,7 +273,7 @@
               {{ release.repositoryURL[page.lang] | remove: "https://" | replace_first: "/", "                    " | truncate: 20, "" | rstrip }}
           </a>
         </p>
-        <p>Licence(s):
+        <p>License(s):
           {% for license in release.licenses %}
             <a href="{{ license.URL[page.lang] }}" target="_blank">{{ license.spdxID }}</a>&nbsp;
           {% endfor %}
