--- a/_includes/codeTable.html
+++ b/_includes/codeTable.html
@@ -1,3 +1,5 @@
+<div class="row">
+
 <!-- Filter dropdowns -->
 <div class="col-md-3">
   <details open>
@@ -6,9 +8,9 @@
       <div class="form-group">
         <label for="dt_govLevel">Level of Government</label>
         <select class="form-control" id="dt_govLevel" name="dt_govLevel" data-column="7">
-          <option value=""></option>
+          <option value="">&nbsp;</option>
           {% for fptms in site.data.code %}
-            {% assign fptm = fptms[0] %}
+          {% assign fptm = fptms[0] %}
             <option value="{{ fptm | capitalize  }}">{{ fptm | capitalize }}</option>
           {% endfor %}
         </select>
@@ -17,7 +19,7 @@
       <div class="form-group">
         <label for="dt_department">Administration</label>
         <select class="form-control" id="dt_department" name="dt_department" data-column="0">
-          <option value=""></option>
+          <option value="">&nbsp;</option>
           {% assign admin_array = "" | split: ',' %}
           {% for fptms in site.data.code %}
             {% assign fptm = fptms[1] %}
@@ -56,7 +58,7 @@
       <div class="form-group">
         <label for="dt_organization">Organization</label>
         <select class="form-control" id="dt_organization" name="dt_organization" data-column="5">
-          <option value=""></option>
+          <option value="">&nbsp;</option>
           {% assign org_array = "" | split: ',' %}
           
           {% for fptms in site.data.code %}
@@ -81,7 +83,7 @@
       <div class="form-group">
         <label for="dt_license">License</label>
         <select class="form-control" id="dt_license" name="dt_license" data-column="3">
-          <option value=""></option>
+          <option value="">&nbsp;</option>
           {% assign license_array = "" | split: ',' %}
           
           {% for fptms in site.data.code %}
@@ -106,7 +108,7 @@
       <div class="form-group">
         <label for="dt_tag">Tag</label>
         <select class="form-control" id="dt_tag" name="dt_tag" data-column="4">
-          <option value=""></option>
+          <option value="">&nbsp;</option>
           {% assign tag_array = "" | split: ',' %}
           
           {% for fptms in site.data.code %}
@@ -284,3 +286,5 @@
     {% endfor %}
   {% endfor %}
 {% endfor %}
+
+</div>
