--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,8 +5,8 @@
 </aside>
 
 {% if page.lang == 'fr' %}
-<footer role="contentinfo" id="wb-info">
-  <nav role="navigation" class="container wb-navcurr">
+<footer id="wb-info">
+  <nav class="container wb-navcurr">
     <h2 class="wb-inv">Au sujet du gouvernement</h2>
     <ul class="list-unstyled colcount-sm-2 colcount-md-3">
       <li><a href="https://www.canada.ca/fr/contact.html">Contactez-nous</a></li>
