--- a/_includes/header.html
+++ b/_includes/header.html
@@ -39,7 +39,7 @@
     <div class="row">
       <div class="brand col-xs-8 col-sm-9 col-md-6">
         <a href="https://www.canada.ca/en.html">
-          <img src="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/assets/sig-blk-{{ page.lang }}.svg" alt="">
+          <img src="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/assets/sig-blk-{{ page.lang }}.svg" alt="Government of Canada / Gouvernement du Canada">
           <span class="wb-inv"> Government of Canada / <span lang="fr">Gouvernement du Canada</span></span>
         </a>
       </div>
