htmlproofer options, fix errors!

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -76,7 +76,7 @@
           <a href="#wb-cont">Top of Page <span class="glyphicon glyphicon-chevron-up"></span></a>
         </div>
         <div class="col-xs-6 col-md-3 col-lg-2 text-right">
-          <object type="image/svg+xml" tabindex="-1" role="img" data="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/assets/wmms-blk.svg" aria-label="Symbol of the Government of Canada"></object>
+          <img src="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/assets/wmms-blk.svg" alt="Symbol of the Government of Canada">
         </div>
       </div>
     </div>
