--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,14 +21,14 @@
             {% assign posts=site.posts | where:"ref", page.ref | sort: 'lang' %}
             {% for my_post in posts %}
               {% if my_post.lang != page.lang %}
-                <li><a lang="{{ my_post.lang }}" hreflang="{{ my_post.lang }}" href="{{ my_post.url | prepend: post.baseurl }}">{{ site.language[my_post.lang] }}</a></li>
+                <li><a lang="{{ my_post.lang }}" hreflang="{{ my_post.lang }}" href="{{ my_post.url | prepend: '.' }}">{{ site.language[my_post.lang] }}</a></li>
               {% endif %}
             {% endfor %}  
 
             {% assign pages=site.pages | where:"ref", page.ref | sort: 'lang' %}
             {% for my_page in pages %}
               {% if my_page.lang != page.lang %}
-                <li><a lang="{{ my_page.lang }}" hreflang="{{ my_page.lang }}" href="{{ my_page.url | prepend: site.baseurl }}">{{ site.language[my_page.lang] }}</a></li>
+                <li><a lang="{{ my_page.lang }}" hreflang="{{ my_page.lang }}" href="{{ my_page.url | prepend: '.' }}">{{ site.language[my_page.lang] }}</a></li>
               {% endif %}
             {% endfor %}
           </ul>
@@ -39,7 +39,7 @@
     <div class="row">
       <div class="brand col-xs-8 col-sm-9 col-md-6">
         <a href="https://www.canada.ca/en.html">
-          <img src="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/assets/sig-blk-{{ page.lang }}.svg" alt="">
+          <img src="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/assets/sig-blk-{{ page.lang }}.svg" alt="Government of Canada / Gouvernement du Canada">
           <span class="wb-inv"> Government of Canada / <span lang="fr">Gouvernement du Canada</span></span>
         </a>
       </div>
@@ -86,9 +86,9 @@
           <li><a href="https://www.canada.ca/{{ page.lang }}.html">{{ site.home[page.lang] }}</a></li>
           {% if page.ref != "home" %}
             {% if page.lang == "en" %}
-              <li><a href="{{ site.baseurl }}/home.html">{{ site.title[page.lang] }}</a></li>
+              <li><a href="./home.html">{{ site.title[page.lang] }}</a></li>
             {% else %}
-              <li><a href="{{ site.baseurl }}/accueil.html">{{ site.title[page.lang] }}</a></li>
+              <li><a href="./accueil.html">{{ site.title[page.lang] }}</a></li>
             {% endif %}
           {% endif %}
         </ol>
