add /en and /fr to all permalinks and fix some links - Rename home.html and accueil.html to index.html

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,14 +21,14 @@
             {% assign posts=site.posts | where:"ref", page.ref | sort: 'lang' %}
             {% for my_post in posts %}
               {% if my_post.lang != page.lang %}
-                <li><a lang="{{ my_post.lang }}" hreflang="{{ my_post.lang }}" href="{{ my_post.url | prepend: '.' }}">{{ site.language[my_post.lang] }}</a></li>
+                <li><a lang="{{ my_post.lang }}" hreflang="{{ my_post.lang }}" href="{{ my_post.url | prepend: '..' }}">{{ site.language[my_post.lang] }}</a></li>
               {% endif %}
             {% endfor %}  
 
             {% assign pages=site.pages | where:"ref", page.ref | sort: 'lang' %}
             {% for my_page in pages %}
               {% if my_page.lang != page.lang %}
-                <li><a lang="{{ my_page.lang }}" hreflang="{{ my_page.lang }}" href="{{ my_page.url | prepend: '.' }}">{{ site.language[my_page.lang] }}</a></li>
+                <li><a lang="{{ my_page.lang }}" hreflang="{{ my_page.lang }}" href="{{ my_page.url | prepend: '..' }}">{{ site.language[my_page.lang] }}</a></li>
               {% endif %}
             {% endfor %}
           </ul>
@@ -86,9 +86,9 @@
           <li><a href="https://www.canada.ca/{{ page.lang }}.html">{{ site.home[page.lang] }}</a></li>
           {% if page.ref != "home" %}
             {% if page.lang == "en" %}
-              <li><a href="./home.html">{{ site.title[page.lang] }}</a></li>
+              <li><a href="./index.html">{{ site.title[page.lang] }}</a></li>
             {% else %}
-              <li><a href="./accueil.html">{{ site.title[page.lang] }}</a></li>
+              <li><a href="./index.html">{{ site.title[page.lang] }}</a></li>
             {% endif %}
           {% endif %}
         </ol>
