--- a/_includes/codeRepoGroups.html
+++ b/_includes/codeRepoGroups.html
@@ -1,7 +1,3 @@
-<!DOCTYPE html>
-<head>
- <title>Open Source Code Groups</title>
-</head>
 <ul class="list-unstyled">
    <li>
       <details>
@@ -31,11 +27,11 @@
                 {% endfor %}
             {% endfor %}
            
-            {% assign repo_array = repo_array | sort: "name" | uniq %}
+           {% assign repo_array = repo_array | sort: "name" | uniq %}
             {% for repo in repo_array %}
                 {% assign org_name =  repo | split: "/" %}
                 {% if org_name.size == 3  %}
-                <div class="list-group">
+                <div>
                     <a href="{{"https://"| append: org_name[1] | append: "/" | append: org_name[2] }}" class="list-group-item" target="_blank">
                         <ul>
                             <li>
@@ -43,22 +39,22 @@
                             </li>
                         </ul>
                     </a>    
-                        <ul class="lst-none"> 
-                            {{ org_name[0] }} 
-                        </ul>
+                    <ul class="lst-none"> 
+                        {{ org_name[0] }} 
+                    </ul>
                 </div>
-                <div class="list-group">
                 {% elsif org_name.size == 4  %}
+                <div>
                     <a href="{{"https://"| append: org_name[1] | append: "/" | append: org_name[2] | append: "/" | append: org_name[3] }}" target="_blank">
                     <ul>
-                            <li>
-                                {{ org_name[3] }} 
-                            </li>
-                        </ul>
+                        <li>
+                            {{ org_name[3] }} 
+                        </li>
+                    </ul>
                     </a>
-                        <ul class="lst-none"> 
-                            {{ org_name[0] }} 
-                        </ul>
+                    <ul class="lst-none"> 
+                        {{ org_name[0] }} 
+                    </ul>
                 </div>
                 {% endif %}
             {% endfor %}            
@@ -94,11 +90,11 @@
                 {% endfor %}
             {% endfor %}
             
-            {% assign repo_array = repo_array | sort: "name" | uniq %}
+             {% assign repo_array = repo_array | sort: "name" | uniq %}
             {% for repo in repo_array %}
                 {% assign org_name =  repo | split: "/" %}
                 {% if org_name.size == 3  %}
-                <div class="list-group">
+                <div>
                     <a href="{{"https://"| append: org_name[1] | append: "/" | append: org_name[2] }}" class="list-group-item" target="_blank">
                         <ul>
                             <li>
@@ -106,22 +102,22 @@
                             </li>
                         </ul>
                     </a>    
-                        <ul class="lst-none"> 
-                            {{ org_name[0] }} 
-                        </ul>
+                    <ul class="lst-none"> 
+                        {{ org_name[0] }} 
+                    </ul>
                 </div>
-                <div class="list-group">
                 {% elsif org_name.size == 4  %}
+                <div>
                     <a href="{{"https://"| append: org_name[1] | append: "/" | append: org_name[2] | append: "/" | append: org_name[3] }}" target="_blank">
                     <ul>
-                            <li>
-                                {{ org_name[3] }} 
-                            </li>
-                        </ul>
+                        <li>
+                            {{ org_name[3] }} 
+                        </li>
+                    </ul>
                     </a>
-                        <ul class="lst-none"> 
-                            {{ org_name[0] }} 
-                        </ul>
+                    <ul class="lst-none"> 
+                        {{ org_name[0] }} 
+                    </ul>
                 </div>
                 {% endif %}
             {% endfor %}            
@@ -161,7 +157,7 @@
             {% for repo in repo_array %}
                 {% assign org_name =  repo | split: "/" %}
                 {% if org_name.size == 3  %}
-                <div class="list-group">
+                <div>
                     <a href="{{"https://"| append: org_name[1] | append: "/" | append: org_name[2] }}" class="list-group-item" target="_blank">
                         <ul>
                             <li>
@@ -169,22 +165,22 @@
                             </li>
                         </ul>
                     </a>    
-                        <ul class="lst-none"> 
-                            {{ org_name[0] }} 
-                        </ul>
+                    <ul class="lst-none"> 
+                        {{ org_name[0] }} 
+                    </ul>
                 </div>
-                <div class="list-group">
                 {% elsif org_name.size == 4  %}
+                <div>
                     <a href="{{"https://"| append: org_name[1] | append: "/" | append: org_name[2] | append: "/" | append: org_name[3] }}" target="_blank">
                     <ul>
-                            <li>
-                                {{ org_name[3] }} 
-                            </li>
-                        </ul>
+                        <li>
+                            {{ org_name[3] }} 
+                        </li>
+                    </ul>
                     </a>
-                        <ul class="lst-none"> 
-                            {{ org_name[0] }} 
-                        </ul>
+                    <ul class="lst-none"> 
+                        {{ org_name[0] }} 
+                    </ul>
                 </div>
                 {% endif %}
             {% endfor %}            
