fix the W3C validation html errors

--- a/_includes/codeRepoGroups.html
+++ b/_includes/codeRepoGroups.html
@@ -1,3 +1,5 @@
+<div class="row">
+
 <ul class="list-unstyled">
    <li>
       <details>
@@ -200,3 +202,5 @@
       </details>
    </li>
 </ul>
+
+</div>
